--- a/.gitconfig
+++ b/.gitconfig
@@ -15,8 +15,16 @@
 
 [alias]
     log-g = log --graph --pretty=format:'%Cblue%h %Cgreen%ci %Cblue%m %Creset%s'
-    status = status -s -b
-    co = checkout
-    b = branch
+    st = status -s -b
+    br = branch
+    re = remote -v
     a = add
     c = commit
+    # diff
+    dm = diff master
+    dc = diff --cached
+    d1 = diff HEAD~
+    d2 = diff HEAD~~
+    d3 = diff HEAD~~~
+    d4 = diff HEAD~~~~
+    d5 = diff HEAD~~~~~
