--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,7 +24,6 @@ bind-key -r J swap-pane -D
 
 # Visual{{{1
 set-option -g base-index 1
-
 # Status line{{{2
 set -g status-bg black
 set -g status-fg white
@@ -38,8 +37,8 @@ set -g message-attr bold
 set -g message-fg white
 set -g message-bg red
 
+set-option -g pane-border-fg black
 set -g pane-active-border-fg blue
-#set -g pane-active-border-bg black
 
 set-window-option -g mode-bg white
 set-window-option -g mode-fg black
