--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,9 +3,26 @@ unbind-key C-b
 set-option -g prefix C-t
 bind-key C-t send-prefix
 
-# like Vim{{{1
+# Visual{{{1
+set-option -g base-index 1
+set-window-option -g automatic-rename off
+
+# Status line
+set -g status-bg black
+set -g status-fg white
+set -g status-attr dim
+set -g status-interval 10
+set -g status-left-length 30
+set -g status-right-length 70
+#set -g status-left '#S #[fg=green]#14H#[uname] #[default]'
+set -g status-left ''
+set -g status-right '#[bg=magenta,bold]#(ut.sh) CPU:#(getcpu.sh) Mem:#(getmem.sh) - #(biggestapp.sh)#[default]'
+
+
+# Act like Vim{{{1
 set-window-option -g mode-keys vi
 bind y copy-mode
+bind v copy-mode
 bind p paste-buffer
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
@@ -13,39 +30,39 @@ bind-key -r h select-pane -L
 bind-key -r l select-pane -R
 bind-key -r k select-pane -U
 bind-key -r j select-pane -D
-bind-key -r C-h select-pane -L
-bind-key -r C-l select-pane -R
-bind-key -r C-k select-pane -U
-bind-key -r C-j select-pane -D
+# bind-key -r C-h select-pane -L
+# bind-key -r C-l select-pane -R
+# bind-key -r C-k select-pane -U
+# bind-key -r C-j select-pane -D
 bind-key -r H swap-pane -U
 bind-key -r L swap-pane -D
 bind-key -r K swap-pane -U
 bind-key -r J swap-pane -D
+bind-key -r < resize-pane -L 5
+bind-key -r > resize-pane -R 5
+bind-key -r + resize-pane -U 5
+bind-key -r - resize-pane -D 5
 
-# Visual{{{1
-set-option -g base-index 1
-# Status line{{{2
-set -g status-bg black
-set -g status-fg white
-set -g status-attr dim
+# Pane {{{1
+bind 1 break-pane
+bind 2 split-window -v
+bind 3 split-window -h
 
-# left: whoami@hostname
-set -g status-left '#[fg=green]#20(whoami)@#H'
-set -g status-right ''
 
 set -g message-attr bold
 set -g message-fg white
 set -g message-bg red
 
 set-option -g pane-border-fg black
-set -g pane-active-border-fg blue
+set -g pane-active-border-bg black
+set -g pane-active-border-fg red
 
 set-window-option -g mode-bg white
 set-window-option -g mode-fg black
 set-window-option -g window-status-bg black
 set-window-option -g window-status-fg white
-set-window-option -g window-status-current-bg green
-set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-bg red
+set-window-option -g window-status-current-fg white
 set-window-option -g window-status-current-attr bold
 
 
