bind key 2 or 5 to change layout

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,10 +44,8 @@ bind-key -r + resize-pane -U 10
 bind-key -r - resize-pane -D 10
 
 # Pane {{{1
-bind 1 break-pane
-bind 2 split-window -v
-bind 3 split-window -h
-
+bind 2 select-layout main-horizontal
+bind 5 select-layout main-vertical
 
 set -g message-attr bold
 set -g message-fg white
