N(large N) to previous window

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,6 +42,7 @@ bind-key -r < resize-pane -L 15
 bind-key -r > resize-pane -R 15
 bind-key -r + resize-pane -U 10
 bind-key -r - resize-pane -D 10
+bind-key -r N previous-window
 
 # Pane {{{1
 bind 2 select-layout main-horizontal
