--- a/.gitconfig
+++ b/.gitconfig
@@ -16,12 +16,14 @@
 	quotepath = false
 
 [alias]
-    logg = log --graph --date-order --pretty=format:'%Cblue%h %Cgreen%ci %Cred%an %Cblue%m %Creset%s %Cred%d'
-    logn = log --pretty=format:'%Cblue%h %Cgreen%ar %Cred%an %Creset%s %Cred%d'
+    loggr = log --graph --date-order --pretty=format:'%Cblue%h %Cgreen%ci %Cred%an %Cblue%m %Creset%s %Cred%d'
+    logg = log --stat --pretty=format:'%Cblue%h %Cgreen%ar %Cred%an %Creset%s %Cred%d'
+    logn = log --stat --pretty=format:'%Cblue%h %Cgreen%ar %Cred%an %Creset%s %Cred%d'
     logo = log --oneline --decorate
     st = status -s -b
     br = branch
     co = checkout
+    r = remote -v
     re = remote -v
     a = add
     c = commit
