tmux selection -> buffer, then send it to clipboard

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,10 @@ bind-key C-t send-prefix
 set-option -g base-index 1
 set-window-option -g automatic-rename off
 
+# clip board
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+bind C-y run-shell 'reattach-to-user-namespace tmux-pbcopy'
+
 # Status line
 set -g status-bg black
 set -g status-fg white
@@ -69,4 +73,4 @@ set-window-option -g window-status-current-attr bold
 # Japanese
 set-window-option -g utf8 on
 # reload settings
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf; run-shell "echo 'Reload'"
