--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@ bind-key C-t send-prefix
 
 # Visual{{{1
 set-option -g base-index 1
-set-window-option -g automatic-rename off
+set-window-option -g automatic-rename on
 
 # clip board
 set-option -g default-command "reattach-to-user-namespace -l zsh"
@@ -34,10 +34,10 @@ bind-key -r h select-pane -L
 bind-key -r l select-pane -R
 bind-key -r k select-pane -U
 bind-key -r j select-pane -D
-# bind-key -r C-h select-pane -L
-# bind-key -r C-l select-pane -R
-# bind-key -r C-k select-pane -U
-# bind-key -r C-j select-pane -D
+bind-key -r C-h select-pane -L
+bind-key -r C-l select-pane -R
+bind-key -r C-k select-pane -U
+bind-key -r C-j select-pane -D
 bind-key -r H swap-pane -U
 bind-key -r L swap-pane -D
 bind-key -r K swap-pane -U
