include zsh auto-fu as a submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".zsh/zsh-manydots-magic"]
 	path = .zsh/zsh-manydots-magic
 	url = git://github.com/knu/zsh-manydots-magic.git
+[submodule ".zsh/auto-fu"]
+	path = .zsh/auto-fu
+	url = https://github.com/hchbaw/auto-fu.zsh.git
