--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,9 +7,9 @@ bind-key C-t send-prefix
 set-option -g base-index 1
 set-window-option -g automatic-rename on
 
-# clip board
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-bind C-y run-shell 'reattach-to-user-namespace tmux-pbcopy'
+## clip board
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
+# bind C-y run-shell 'reattach-to-user-namespace tmux-pbcopy'
 
 # Status line
 set -g status-bg black
@@ -18,11 +18,11 @@ set -g status-attr dim
 set -g status-interval 10
 set -g status-left-length 30
 set -g status-right-length 70
-#set -g status-left '#S #[fg=green]#14H#[uname] #[default]'
+# set -g status-left '#S #[fg=green]#14H#[uname] #[default]'
 set -g status-left ''
-set -g status-right '#[bg=magenta,bold]#(ut.sh) CPU:#(getcpu.sh) Mem:#(getmem.sh) - #(biggestapp.sh)#[default]'
-
-
+# set -g status-right '#[bg=magenta,bold]#(ut.sh) CPU:#(getcpu.sh) Mem:#(getmem.sh) - #(biggestapp.sh)#[default]'
+ 
+ 
 # Act like Vim{{{1
 set-window-option -g mode-keys vi
 bind y copy-mode
