--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,8 +8,8 @@ set-option -g base-index 1
 set-window-option -g automatic-rename on
 
 ## clip board
-# set-option -g default-command "reattach-to-user-namespace -l zsh"
-# bind C-y run-shell 'reattach-to-user-namespace tmux-pbcopy'
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+bind C-y run-shell 'reattach-to-user-namespace tmux-pbcopy'
 
 # Status line
 set -g status-bg black
@@ -21,8 +21,8 @@ set -g status-right-length 70
 # set -g status-left '#S #[fg=green]#14H#[uname] #[default]'
 set -g status-left ''
 # set -g status-right '#[bg=magenta,bold]#(ut.sh) CPU:#(getcpu.sh) Mem:#(getmem.sh) - #(biggestapp.sh)#[default]'
- 
- 
+
+
 # Act like Vim{{{1
 set-window-option -g mode-keys vi
 bind y copy-mode
