--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@ set-window-option -g automatic-rename on
 
 ## clip board
 set-option -g default-command "reattach-to-user-namespace -l zsh"
-bind C-y run-shell 'reattach-to-user-namespace tmux-pbcopy'
+bind C-y run-shell 'reattach-to-user-namespace copy_to_clipboard'
 
 # Status line
 set -g status-bg black
