--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,8 +8,12 @@ set-option -g base-index 1
 set-window-option -g automatic-rename on
 
 ## clip board
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-bind C-y run-shell 'reattach-to-user-namespace copy_to_clipboard'
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
+#bind C-y run-shell 'reattach-to-user-namespace copy_to_clipboard'
+
+# only Linux
+set-option -g default-command "zsh"
+bind C-y run-shell 'copy_to_clipboard'
 
 # Status line
 set -g status-bg black
