--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,8 +8,8 @@ set-option -g base-index 1
 set-window-option -g automatic-rename on
 
 ## clip board
-#set-option -g default-command "reattach-to-user-namespace -l zsh"
-#bind C-y run-shell 'reattach-to-user-namespace copy_to_clipboard'
+if "test `uname` = \"Darwin\"" "set-option -g default-command \"reattach-to-user-namespace -l zsh\""
+if "test `uname` = \"Darwin\"" "bind C-y run-shell 'reattach-to-user-namespace copy_to_clipboard'"
 
 # only Linux
 set-option -g default-command "zsh"
