--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,5 @@
-[include]
-  path = .gitconfig.local
-
 [user]
+  name  = Hash
 	email = takuya21hashimoto@gmail.com
 
 [color]
@@ -56,3 +54,7 @@
 [tig "bind"]
   generic = g move-first-line
   generic = G move-last-line
+
+[include]
+  path = .gitconfig.local
+
