--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -35,7 +35,7 @@ cmap <C-n> <Tab>
 cmap <C-p> <S-Tab>
 
 noremap <C-q> <S-ESC>
-noremap <ESC><ESC> :set nohlsearch
+noremap <ESC><ESC> :set nohlsearch<CR>
 
 
 " Hatena Settings {{{3
@@ -45,16 +45,16 @@ noremap <ESC><ESC> :set nohlsearch
 
 
 " Cut & Copy & Paste, select all, and Redo. {{{3
-inoremap <C-a> <C-v><C-a>
-inoremap <C-z> <C-v><C-z>
-inoremap <C-x> <C-v><C-x>
-inoremap <C-c> <C-v><C-c>
-inoremap <C-v> <C-v><C-v>
-cnoremap <C-a> <C-v><C-a>
-cnoremap <C-z> <C-v><C-z>
-cnoremap <C-x> <C-v><C-x>
-cnoremap <C-c> <C-v><C-c>
-cnoremap <C-v> <C-v><C-v>
+" inoremap <C-a> <C-v><C-a>
+" inoremap <C-z> <C-v><C-z>
+" inoremap <C-x> <C-v><C-x>
+" inoremap <C-c> <C-v><C-c>
+" inoremap <C-v> <C-v><C-v>
+" cnoremap <C-a> <C-v><C-a>
+" cnoremap <C-z> <C-v><C-z>
+" cnoremap <C-x> <C-v><C-x>
+" cnoremap <C-c> <C-v><C-c>
+" cnoremap <C-v> <C-v><C-v>
 
 
 "" Style/Colors {{{2
