synchronize panes by '=' key

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -72,6 +72,8 @@ set-window-option -g window-status-current-bg red
 set-window-option -g window-status-current-fg white
 set-window-option -g window-status-current-attr bold
 
+# bind key for synchronizing panes
+bind-key = set-window-option synchronize-panes
 
 # Othre settings{{{1
 # Japanese
