clipboard... Linux settings come first, then overwrite it if Mac

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,13 +11,14 @@ set -g default-command /usr/local/bin/zsh
 set-option -g base-index 1
 set-window-option -g automatic-rename on
 
-## clip board
-if "test `uname` = \"Darwin\"" "set-option -g default-command \"reattach-to-user-namespace -l zsh\""
-if "test `uname` = \"Darwin\"" "bind C-y run-shell 'reattach-to-user-namespace copy_to_clipboard'"
-
-# only Linux
+# clipboard
+## Linux is default
 set-option -g default-command "zsh"
 bind C-y run-shell 'copy_to_clipboard'
+
+## override if Mac
+if "test `uname` = \"Darwin\"" "set-option -g default-command \"reattach-to-user-namespace -l zsh\""
+if "test `uname` = \"Darwin\"" "bind C-y run-shell 'reattach-to-user-namespace copy_to_clipboard'"
 
 # Status line
 set -g status-bg black
