[tmux.conf] comment out default-{shell,command}

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,8 @@ set-option -g prefix C-t
 bind-key C-t send-prefix
 
 # default shell
-set -g default-shell /usr/local/bin/zsh
-set -g default-command /usr/local/bin/zsh
+# set -g default-shell /usr/local/bin/zsh
+# set -g default-command /usr/local/bin/zsh
 
 # Visual{{{1
 set-option -g base-index 1
