--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,8 @@ set-window-option -g automatic-rename on
 set-option -g default-command "zsh"
 bind C-y run-shell 'copy_to_clipboard'
 
+bind-key -r C-e run-shell 'say_tmux'
+
 ## override if Mac
 if "test `uname` = \"Darwin\"" "set-option -g default-command \"reattach-to-user-namespace -l zsh\""
 if "test `uname` = \"Darwin\"" "bind C-y run-shell 'reattach-to-user-namespace copy_to_clipboard'"
