--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ multiuser.screen
 
 .lein/self-installs
 .lein/repl-history
+
+# emacs
+.emacs.d/auto-save-list
+.emacs.d/elpa/*
+!.emacs.d/elpa/.gitkeep
+.emacs.d/plugins/*
+!.emacs.d/plugins/.gitkeep
