--- a/.gitconfig
+++ b/.gitconfig
@@ -53,6 +53,11 @@
 [grep]
   lineNumber = true
 
+[pager]
+  log = diff-highlight | less
+  show = diff-highlight | less
+  diff = diff-highlight | less
+
 [tig "bind"]
   generic = g move-first-line
   generic = G move-last-line
