set git username 'memerelics'

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-  name  = Hash
-	email = takuya21hashimoto@gmail.com
+    name  = memerelics
+    email = takuya21hashimoto@gmail.com
 
 [color]
     status = auto
