--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ multiuser.screen
 
 .lein/self-installs
 .lein/repl-history
+.lein/indices
 
 # emacs
 *\#
@@ -16,3 +17,4 @@ multiuser.screen
 
 .emacs.d/ac-comphist.dat
 .emacs.d/projectile-bookmarks.eld
+.emacs.d/tramp
