update vimperator settings
* key ignoring feature is now bundled into vimperator itself
* use latest copy.js

--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -3,16 +3,11 @@ set runtimepath=$HOME/.vimperator
 set visualbell
 set titlestring=ViFox
 set complete=sl
-set gui=
+set gui=nonavigation
 set newtab=all
 set nextpattern+=next
 set previouspattern+=prev
 set previouspattern+=previous
-
-" ignore pages {{{2
-autocmd LocationChange .*                             js modes.passAllKeys = false
-autocmd LocationChange mail\\.google\\.com            js modes.passAllKeys = true
-autocmd LocationChange www\\.google\\.com/calendar    js modes.passAllKeys = true
 
 "key mappings {{{2
 nnoremap <BS> H
