add asana to ignore sites

--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -13,6 +13,8 @@ set previouspattern+=previous
 autocmd LocationChange .*                             js modes.passAllKeys = false
 autocmd LocationChange mail\\.google\\.com            js modes.passAllKeys = true
 autocmd LocationChange www\\.google\\.com/calendar    js modes.passAllKeys = true
+autocmd LocationChange app\\.asana\\.com              js modes.passAllKeys = true
+
 
 "key mappings {{{2
 nnoremap <BS> H
