--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,7 @@ bind C-y run-shell 'copy_to_clipboard'
 bind-key -r C-e run-shell 'say_tmux'
 
 ## override if Mac
+# $ brew install reattach-to-user-namespace
 if "test `uname` = \"Darwin\"" "set-option -g default-command \"reattach-to-user-namespace -l zsh\""
 if "test `uname` = \"Darwin\"" "bind C-y run-shell 'reattach-to-user-namespace copy_to_clipboard'"
 
