[vimperator] ignore trello

--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -15,6 +15,7 @@ autocmd LocationChange mail\\.google\\.com            js modes.passAllKeys = tru
 autocmd LocationChange www\\.google\\.com/calendar    js modes.passAllKeys = true
 autocmd LocationChange app\\.asana\\.com              js modes.passAllKeys = true
 autocmd LocationChange reader\\.livedoor\\.com        js modes.passAllKeys = true
+autocmd LocationChange trello\\.com                   js modes.passAllKeys = true
 
 
 "key mappings {{{2
