[tmux] comment out default-command to avoid .zshenv  being loaded twiece

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,15 +9,15 @@ set-window-option -g automatic-rename on
 
 # clipboard
 ## Linux is default
-set-option -g default-command "zsh"
+# set-option -g default-command "zsh"
 bind C-y run-shell 'copy_to_clipboard'
 
 bind-key -r C-e run-shell 'say_tmux'
 
 ## override if Mac
 # $ brew install reattach-to-user-namespace
-if "test `uname` = \"Darwin\"" "set-option -g default-command \"reattach-to-user-namespace -l zsh\""
-if "test `uname` = \"Darwin\"" "bind C-y run-shell 'reattach-to-user-namespace copy_to_clipboard'"
+# if "test `uname` = \"Darwin\"" "set-option -g default-command \"reattach-to-user-namespace -l zsh\""
+# if "test `uname` = \"Darwin\"" "bind C-y run-shell 'reattach-to-user-namespace copy_to_clipboard'"
 
 # Status line
 set -g status-bg black
