--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,9 @@ set -g status-interval 10
 set -g status-left-length 30
 set -g status-right-length 70
 # set -g status-left '#S #[fg=green]#14H#[uname] #[default]'
-set -g status-left ''
+# set -g status-left ''
+set -g status-left "#[bg=magenta,fg=cyan]#(getcpu.sh) %Y/%m/%d %H:%M:%S#[default] | "
+set -g status-right ''
 # set -g status-right '#[bg=magenta,bold]#(ut.sh) CPU:#(getcpu.sh) Mem:#(getmem.sh) - #(biggestapp.sh)#[default]'
 
 
@@ -36,6 +38,11 @@ bind v copy-mode
 bind p paste-buffer
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
+
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+unbind -t vi-copy Enter
+
 bind-key -r h select-pane -L
 bind-key -r l select-pane -R
 bind-key -r k select-pane -U
@@ -63,8 +70,10 @@ set -g message-fg white
 set -g message-bg red
 
 set-option -g pane-border-fg black
+# set -g pane-active-border-fg red
+set -g pane-active-border-fg white
 set -g pane-active-border-bg black
-set -g pane-active-border-fg red
+# set -g pane-active-border-bg yellow
 
 set-window-option -g mode-bg white
 set-window-option -g mode-fg black
@@ -77,8 +86,5 @@ set-window-option -g window-status-current-attr bold
 # bind key for synchronizing panes
 bind-key = set-window-option synchronize-panes
 
-# Othre settings{{{1
-# Japanese
-set-window-option -g utf8 on
 # reload settings
 bind r source-file ~/.tmux.conf; run-shell "echo 'Reload'"
