[tmux] tmux 2.4 changed the way to bind keys in vi-mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,12 +36,9 @@ set-window-option -g mode-keys vi
 bind y copy-mode
 bind v copy-mode
 bind p paste-buffer
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
-
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-unbind -t vi-copy Enter
+unbind-key -T copy-mode-vi Space; bind-key -T copy-mode-vi v send-keys -X begin-selection
+unbind-key -T copy-mode-vi Enter; bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+unbind-key -T copy-mode-vi C-v  ; bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
 bind-key -r h select-pane -L
 bind-key -r l select-pane -R
