--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,9 +18,7 @@ bind C-y run-shell 'copy_to_clipboard'
 # if "test `uname` = \"Darwin\"" "bind C-y run-shell 'reattach-to-user-namespace copy_to_clipboard'"
 
 # Status line
-set -g status-bg black
-set -g status-fg white
-set -g status-attr dim
+set -g status-style bg=black,fg=white,dim
 set -g status-interval 10
 set -g status-left-length 30
 set -g status-right-length 70
@@ -62,23 +60,16 @@ bind-key -r N previous-window
 bind 2 select-layout main-horizontal
 bind 5 select-layout main-vertical
 
-set -g message-attr bold
-set -g message-fg white
-set -g message-bg red
+set -g message-style bold,fg=white,bg=red
 
-set-option -g pane-border-fg black
+set-option -g pane-border-style fg=black
 # set -g pane-active-border-fg red
-set -g pane-active-border-fg white
-set -g pane-active-border-bg black
+set -g pane-active-border-style fg=white,bg=black
 # set -g pane-active-border-bg yellow
 
-set-window-option -g mode-bg white
-set-window-option -g mode-fg black
-set-window-option -g window-status-bg black
-set-window-option -g window-status-fg white
-set-window-option -g window-status-current-bg red
-set-window-option -g window-status-current-fg white
-set-window-option -g window-status-current-attr bold
+set-window-option -g mode-style bg=white,fg=black
+set-window-option -g window-status-style bg=black,fg=white
+set-window-option -g window-status-current-style bg=red,fg=white,bold
 
 # bind key for synchronizing panes
 bind-key = set-window-option synchronize-panes
