[VSCode] Kubernetes path configurations

--- a/VSCode/settings.json
+++ b/VSCode/settings.json
@@ -40,4 +40,11 @@
     "!Split",
     "!Join sequence"
   ],
+
+  "vs-kubernetes": {
+    "vs-kubernetes.helm-path": "/Users/thash/.vs-kubernetes/tools/helm/darwin-amd64/helm",
+    "vs-kubernetes.draft-path": "/Users/thash/.vs-kubernetes/tools/draft/darwin-amd64/draft",
+    "vs-kubernetes.minikube-path": "/Users/thash/.vs-kubernetes/tools/minikube/darwin-amd64/minikube",
+    "vs-kubernetes.kubectl-path": "/Users/thash/.vs-kubernetes/tools/kubectl/kubectl"
+  },
 }
