[VSCode] color, CFn, and outline

--- a/VSCode/settings.json
+++ b/VSCode/settings.json
@@ -3,7 +3,6 @@
   "editor.detectIndentation": false,
   "editor.fontSize": 10,
   "editor.minimap.enabled": false,
-  "editor.tabSize": 2,
   "files.autoSave": "afterDelay",
   "markdown.preview.breaks": true,
   "markdown.preview.fontSize": 10,
@@ -15,32 +14,44 @@
     { "before": ["j"], "after": ["g", "j"] },
     { "before": ["k"], "after": ["g", "k"] }
   ],
-  "window.zoomLevel": 1,
-  "workbench.colorTheme": "Solarized Dark",
+  "window.zoomLevel": 0,
+  "workbench.colorTheme": "One Monokai",
 
   // Enable/disable default YAML formatter (requires restart)
   "yaml.format.enable": true,
   // Custom tags for the parser to use
   "yaml.customTags": [
     "!And",
-    "!If",
-    "!Not",
-    "!Equals",
-    "!Or",
-    "!FindInMap sequence",
-    "!Base64",
+    "!Base64 mapping",
     "!Cidr",
-    "!Ref",
-    "!Sub",
-    "!GetAtt",
+    "!Condition",
+    "!Equals sequence",
+    "!Equals",
+    "!FindInMap sequence",
     "!GetAZs",
+    "!GetAtt scalar",
+    "!GetAtt sequence",
+    "!GetAtt",
+    "!If",
     "!ImportValue",
-    "!Select",
+    "!Join sequence",
+    "!Not",
+    "!Or",
+    "!Ref",
+    "!Select scalar",
     "!Select sequence",
+    "!Select",
+    "!Split sequence",
     "!Split",
-    "!Join sequence"
+    "!Sub scalar",
+    "!Sub sequence",
+    "!Sub",
   ],
-
+  "yaml.schemas": {
+    "https://d33vqc0rt9ld30.cloudfront.net/latest/gzip/CloudFormationResourceSpecification.json": [
+      "*.cfn.yaml", "*.cfn.yml"
+    ]
+  },
   "vs-kubernetes": {
     "vs-kubernetes.helm-path": "/Users/thash/.vs-kubernetes/tools/helm/darwin-amd64/helm",
     "vs-kubernetes.draft-path": "/Users/thash/.vs-kubernetes/tools/draft/darwin-amd64/draft",
@@ -48,5 +59,27 @@
     "vs-kubernetes.kubectl-path": "/Users/thash/.vs-kubernetes/tools/kubectl/kubectl"
   },
   "editor.suggestSelection": "first",
-  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+"vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+"rust-client.trace.server": "verbose",
+"rust.all_features": true,
+"workbench.sideBar.location": "right",
+"outline.showStrings": false,
+"outline.showOperators": false,
+"outline.showObjects": false,
+"outline.showNumbers": false,
+"outline.showNull": false,
+"outline.showNamespaces": false,
+"outline.showFiles": false,
+"outline.showFields": false,
+"outline.showEvents": false,
+"outline.showEnumMembers": false,
+"outline.showConstructors": false,
+"outline.showArrays": false,
+"outline.showBooleans": false,
+"outline.showKeys": false,
+"outline.showProperties": false,
+"outline.showStructs": false,
+"outline.showTypeParameters": false,
+"outline.showVariables": false,
+"todo-tree.tree.showScanModeButton": false,
 }
