--- a/VSCode/settings.json
+++ b/VSCode/settings.json
@@ -16,7 +16,6 @@
   ],
   "window.zoomLevel": 0,
   "workbench.colorTheme": "One Monokai",
-
   // Enable/disable default YAML formatter (requires restart)
   "yaml.format.enable": true,
   // Custom tags for the parser to use
@@ -82,4 +81,6 @@
 "outline.showTypeParameters": false,
 "outline.showVariables": false,
 "todo-tree.tree.showScanModeButton": false,
+  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+  "editor.fontFamily": "Ricty Diminished,Menlo, Monaco, 'Courier New', monospace",
 }
