[VSCode] tweak CloudFormation syntax - '!If' can accept sequence

--- a/VSCode/settings.json
+++ b/VSCode/settings.json
@@ -31,7 +31,7 @@
     "!GetAtt scalar",
     "!GetAtt sequence",
     "!GetAtt",
-    "!If",
+    "!If sequence",
     "!ImportValue",
     "!Join sequence",
     "!Not",
