[tmux] making sure the copy_to_clipboard script is included in PATH on tmux run-shell

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,14 +8,8 @@ set-option -g base-index 1
 set-window-option -g automatic-rename on
 
 # clipboard
-## Linux is default
 # set-option -g default-command "zsh"
-bind C-y run-shell 'copy_to_clipboard'
-
-## override if Mac
-# $ brew install reattach-to-user-namespace
-# if "test `uname` = \"Darwin\"" "set-option -g default-command \"reattach-to-user-namespace -l zsh\""
-# if "test `uname` = \"Darwin\"" "bind C-y run-shell 'reattach-to-user-namespace copy_to_clipboard'"
+bind C-y run-shell 'PATH=$(ghq root)/github.com/thash/bin:$PATH; copy_to_clipboard'
 
 # Status line
 set -g status-style bg=black,fg=white,dim
